crates/lex/src/tests/snapshots/array_index.snap
---
source: crates/lex/src/tests.rs
assertion_line: 177
expression: "(test[1], tokens)"
---
- "foo[0]"
- Ok:
    - tt:
        Ident: foo
      line: 1
      column: 1
    - tt: OpenBracket
      line: 1
      column: 4
    - tt:
        Num: "0"
      line: 1
      column: 5
    - tt: CloseBracket
      line: 1
      column: 6
    - tt:
        Semicolon: true
      line: 1
      column: 7

