crates/lex/src/tests/snapshots/comment_eol1.snap
---
source: crates/lex/src/tests.rs
assertion_line: 175
expression: "(test[1], tokens)"
---
- "\nif foo { // line1"
- Ok:
    - tt: If
      line: 2
      column: 1
    - tt:
        Ident: foo
      line: 2
      column: 4
    - tt: OpenBrace
      line: 2
      column: 8

