crates/lex/src/tests/snapshots/comment_multi_line.snap
---
source: crates/lex/src/tests.rs
assertion_line: 151
expression: "(test[1], tokens)"
---
- "\nlet foo = 14\n// line1\n// line2\nfoo\n"
- Ok:
    - tt: Let
      line: 2
      column: 1
    - tt:
        Ident: foo
      line: 2
      column: 5
    - tt:
        Op: Assign
      line: 2
      column: 9
    - tt:
        Num: "14"
      line: 2
      column: 11
    - tt:
        Semicolon: true
      line: 2
      column: 13
    - tt:
        Ident: foo
      line: 5
      column: 1
    - tt:
        Semicolon: true
      line: 5
      column: 4

