crates/lex/src/tests/snapshots/for_basic.snap
---
source: crates/lex/src/tests.rs
assertion_line: 95
expression: "(test[1], tokens)"
---
- "\nfor let x = 1; x < 10; 1 {\n    print(x)\n}\n"
- Ok:
    - tt: For
      line: 2
      column: 1
    - tt: Let
      line: 2
      column: 5
    - tt:
        Ident: x
      line: 2
      column: 9
    - tt:
        Op: Assign
      line: 2
      column: 11
    - tt:
        Num: "1"
      line: 2
      column: 13
    - tt:
        Semicolon: false
      line: 2
      column: 14
    - tt:
        Ident: x
      line: 2
      column: 16
    - tt:
        Op: Lt
      line: 2
      column: 18
    - tt:
        Num: "10"
      line: 2
      column: 20
    - tt:
        Semicolon: false
      line: 2
      column: 22
    - tt:
        Num: "1"
      line: 2
      column: 24
    - tt: OpenBrace
      line: 2
      column: 26
    - tt:
        Ident: print
      line: 3
      column: 5
    - tt: OpenParen
      line: 3
      column: 10
    - tt:
        Ident: x
      line: 3
      column: 11
    - tt: CloseParen
      line: 3
      column: 12
    - tt:
        Semicolon: true
      line: 3
      column: 13
    - tt: CloseBrace
      line: 4
      column: 1
    - tt:
        Semicolon: true
      line: 4
      column: 2

